--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,8 +88,10 @@ h4 {
 
 .btn-border {
     background-color: transparent;
-    color: #212121;
+    color: #3BB44A;
     border: 1px solid #212121; 
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+    
 }
 
 .btn-fill:hover,
@@ -104,22 +106,37 @@ h4 {
 
 /* Input fields */
 .form-control {
-    padding-left: 10px;
-    border: 0;
-    border-bottom: 1px solid #212121;
-    border-radius: 0;
-    background-color: transparent; 
-    box-shadow: none;
+    padding-left: 20px;
+    border: 0 ;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #3BB44A;
+    border-radius: 10px;
+    background-color: rgba(233, 232, 230, 0.331); 
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
     outline: 0 none transparent;
     -webkit-appearance:none;
  }
 
-textarea {
+.textarea {
     margin-top: 20px;
     min-height: 100px;
     resize: none;
+    border: #000;
+    
 }
 
+.line1 {
+    width: 100%; 
+    margin: 20px 0px; 
+    border: 2px solid #3BB44A;
+}
+.line2 {
+    width: 100%; 
+    margin: 20px 0px;
+    border: 2px solid #3BB44A;
+    
+}
 .form-control:focus {
     box-shadow: none;
     border-bottom-color: #e1e1e1;
@@ -517,7 +534,7 @@ html, body {
 
 /* Section: Form*/
 .section-form {
-    padding-bottom: 120px;
+    padding-bottom: 10px;
 }
 
 .section-form .btn {
